2007-06-10  Steffen Macke <sdteffen@gmail.com>

	* objects/sissi/site.c:
	* objects/sissi/area.c:
	* objects/sissi/room.c:
	* objects/sissi/sissi_object.c: Translated confidentiality from French to
	English; partial fix for bug #355995
	* installer/win32/dia.nsi: Added SISSI files, ui files
	* app/app_procs.c: #include commands.h
	* app/commands.c: #include interface.h
	* app/interface.c: Declare variables first to make MSVC happy
	
2007-06-07  Lars Clausen  <lars@raeder.dk>

	* app/commands.c
	* app/display.c
	* app/commands.h
	* app/app_procs.c
	* app/interface.c
	* app/interface.h
	* app/disp_callbacks.c
	* app/menus.c
	* app/menus.h
	* lib/diainteractiverenderer.c
	* data/integrated-ui.xml: Patch from Patrick Hallinan
	<patrick.j.hallinan@gmail.com>: More work on integrated UI:
	Toolbar visibility, right-mouse menu.

2007-06-05  Jakub Friedl  <jfriedl@suse.cz>

	* app/load_save.c: Corrected error messages (proper English)

2007-06-02  Lars Clausen  <lars@raeder.dk>

	* lib/Makefile.am (libdia_la_SOURCES): 
	* app/Makefile.am (dia_core_files): 
	* lib/newgroup.c: Moved here from app.
	
	* app/newgroup.c (newgroup_update_data): Correctly update
	selection of children when closing group, fixes crash.
	
	* objects/flowchart/parallelogram.c
	* objects/flowchart/box.c
	* objects/flowchart/diamond.c
	* objects/flowchart/ellipse.c
	* objects/network/radiocell.c
	* objects/SISSI/sissi.c
	* objects/Misc/analog_clock.c
	* objects/standard/zigzagline.c
	* objects/standard/arc.c
	* objects/standard/bezier.c
	* objects/standard/image.c
	* objects/standard/beziergon.c
	* objects/standard/polygon.c
	* objects/standard/line.c
	* objects/standard/box.c
	* objects/standard/polyline.c
	* objects/standard/ellipse.c
	* objects/ER/relationship.c
	* objects/ER/attribute.c
	* objects/ER/entity.c
	* objects/custom/custom_object.c
	* plug-ins/dxf/dxf-import.c
	* plug-ins/xfig/xfig-import.c
	* plug-ins/svg/svg-import.c
	* plug-ins/vdx/vdx-import.c